fix spacing of header

--- a/client/shared/src/components/ResultContainer.scss
+++ b/client/shared/src/components/ResultContainer.scss
@@ -8,7 +8,7 @@
     }
 
     &__header {
-        padding: 0.5rem 0;
+        padding: 0.5rem 0.5rem 0.5rem 0;
         background-color: transparent;
         display: flex;
         align-items: center;
@@ -23,7 +23,7 @@
         &-divider {
             border-right: 1px solid var(--border-color-2);
             height: 1rem;
-            margin: 0 0.25rem;
+            margin: 0 0.5rem;
         }
 
         p {
@@ -42,5 +42,6 @@
     &__toggle-matches-container {
         display: flex;
         flex-shrink: 0;
+        padding: 0;
     }
 }
